--- a/crm_bixby/report/crm_lead_stats_report_views.xml
+++ b/crm_bixby/report/crm_lead_stats_report_views.xml
@@ -33,7 +33,7 @@
         <field name="domain">[]</field>
     </record>
     <record id="crm_stage_analysis_action" model="ir.actions.act_window">
-        <field name="name">Crm Stage Analysis</field>
+        <field name="name">CRM Stage Analysis</field>
         <field name="res_model">crm.stage.report</field>
         <field name="view_type">form</field>
         <field name="view_mode">pivot</field>
